--- a/StresEEG/src/main/resources/streseeg/streseeg/UKLJUCIVANJEAPLIKACIJE-taskform.form
+++ b/StresEEG/src/main/resources/streseeg/streseeg/UKLJUCIVANJEAPLIKACIJE-taskform.form
@@ -3,4 +3,13 @@
 <property name="name" value="UKLJUCIVANJEAPLIKACIJE-taskform.form"/>
 <property name="displayMode" value="default"/>
 <property name="status" value="0"/>
+<field position="0" name="ukljucivanjeAplikacijeId_ukljucenost" type="CheckBox" id="1157482198">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;ukljucenost (ukljucivanjeAplikacijeId)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="in_ukljucivanjeAplikacijeId/ukljucenost"/>
+<property name="outputBinding" value="out_ukljucivanjeAplikacijeId/ukljucenost"/>
+<property name="fieldClass" value="java.lang.Boolean"/>
+</field>
+<dataHolder inputId="in_ukljucivanjeAplikacijeId" name="#9BCAFA" type="dataModelerEntry" outId="out_ukljucivanjeAplikacijeId" value="streseeg.streseeg.UkljucivanjeAplikacije" id="ukljucivanjeAplikacijeId"/>
 </form>
