{/StresEEG/src/main/resources/streseeg/streseeg/ISKLJUCIVANJEIZPROMETA/SMIRIVANJE-taskform.form}

--- a/StresEEG/src/main/resources/streseeg/streseeg/ISKLJUCIVANJEIZPROMETA/SMIRIVANJE-taskform.form
+++ b/StresEEG/src/main/resources/streseeg/streseeg/ISKLJUCIVANJEIZPROMETA/SMIRIVANJE-taskform.form
@@ -3,4 +3,15 @@
 <property name="name" value="ISKLJUCIVANJEIZPROMETA/SMIRIVANJE-taskform.form"/>
 <property name="displayMode" value="default"/>
 <property name="status" value="0"/>
+<field position="0" name="odlukaId_odluka" type="CheckBox" id="824255665">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;Odluka (odlukaId)quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="in_odluka/odluka"/>
+<property name="outputBinding" value="out_odluka/odluka"/>
+<property name="fieldClass" value="java.lang.Boolean"/>
+</field>
+<dataHolder inputId="in_odluka" name="#9BCAFA" type="dataModelerEntry" outId="out_odluka" value="streseeg.streseeg.Odluka" id="odlukaId"/>
 </form>
