--- a/StresEEG/src/main/resources/streseeg/streseeg/UKLJUCIVANJESENZORA-taskform.form
+++ b/StresEEG/src/main/resources/streseeg/streseeg/UKLJUCIVANJESENZORA-taskform.form
@@ -3,14 +3,10 @@
 <property name="name" value="UKLJUCIVANJESENZORA-taskform.form"/>
 <property name="displayMode" value="default"/>
 <property name="status" value="0"/>
-<field position="0" name="senzorInfoId_radi" type="InputText" id="1780009207">
+<field position="0" name="senzorInfoId_radi" type="InputText" id="441402414">
 <property name="fieldRequired" value="false"/>
-<property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;Senzor ukljucenquot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
-<property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
-<property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="label" value="quot;enquot;,quot;radi (senzorInfoId)quot;"/>
 <property name="readonly" value="false"/>
-<property name="isHTML" value="false"/>
-<property name="hideContent" value="false"/>
 <property name="inputBinding" value="in_senzotInfoId/radi"/>
 <property name="outputBinding" value="out_senzorinfoId/radi"/>
 <property name="fieldClass" value="java.lang.String"/>
