--- a/StresEEG/src/main/resources/streseeg/streseeg/ISKLJUCIVANJEIZPROMETA/SMIRIVANJE-taskform.form
+++ b/StresEEG/src/main/resources/streseeg/streseeg/ISKLJUCIVANJEIZPROMETA/SMIRIVANJE-taskform.form
@@ -3,4 +3,13 @@
 <property name="name" value="ISKLJUCIVANJEIZPROMETA/SMIRIVANJE-taskform.form"/>
 <property name="displayMode" value="default"/>
 <property name="status" value="0"/>
+<field position="0" name="odlukaId_odluka" type="CheckBox" id="70223626">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;odluka (odlukaId)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="odlukaId/odluka"/>
+<property name="outputBinding" value="odlukaId/odluka"/>
+<property name="fieldClass" value="java.lang.Boolean"/>
+</field>
+<dataHolder inputId="odlukaId" name="#E9E371" type="dataModelerEntry" outId="odlukaId" value="streseeg.streseeg.Odluka" id="odlukaId"/>
 </form>
