--- a/StresEEG/src/main/resources/streseeg/streseeg/ISKLJUCIVANJEIZPROMETA/SMIRIVANJE-taskform.form
+++ b/StresEEG/src/main/resources/streseeg/streseeg/ISKLJUCIVANJEIZPROMETA/SMIRIVANJE-taskform.form
@@ -3,4 +3,5 @@
 <property name="name" value="ISKLJUCIVANJEIZPROMETA/SMIRIVANJE-taskform.form"/>
 <property name="displayMode" value="default"/>
 <property name="status" value="0"/>
+<dataHolder inputId="smirivanjeId" name="#E9E371" type="dataModelerEntry" outId="smirivanjeId" value="streseeg.streseeg.Odluka" id="smirivanjeId"/>
 </form>
