--- a/StresEEG/src/main/resources/streseeg/streseeg/ODLUCIVANJEKORISNIKA-taskform.form
+++ b/StresEEG/src/main/resources/streseeg/streseeg/ODLUCIVANJEKORISNIKA-taskform.form
@@ -3,4 +3,13 @@
 <property name="name" value="ODLUCIVANJEKORISNIKA-taskform.form"/>
 <property name="displayMode" value="default"/>
 <property name="status" value="0"/>
+<field position="0" name="odlukaId_odluka" type="CheckBox" id="1460496579">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;odluka (odlukaId)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="in_odluka/odluka"/>
+<property name="outputBinding" value="out_odluka/odluka"/>
+<property name="fieldClass" value="java.lang.Boolean"/>
+</field>
+<dataHolder inputId="in_odluka" name="#9BCAFA" type="dataModelerEntry" outId="out_odluka" value="streseeg.streseeg.Odluka" id="odlukaId"/>
 </form>
