--- a/StresEEG/src/main/resources/streseeg/streseeg/POTVRDASTANJAKORISNIKA-taskform.form
+++ b/StresEEG/src/main/resources/streseeg/streseeg/POTVRDASTANJAKORISNIKA-taskform.form
@@ -3,4 +3,13 @@
 <property name="name" value="POTVRDASTANJAKORISNIKA-taskform.form"/>
 <property name="displayMode" value="default"/>
 <property name="status" value="0"/>
+<field position="0" name="stanjeKorisnika_osjecaj" type="CheckBox" id="1168886849">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;osjecaj (stanjeKorisnika)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="in_stanjeKoriniska/osjecaj"/>
+<property name="outputBinding" value="out_stanjeKorisnika/osjecaj"/>
+<property name="fieldClass" value="java.lang.Boolean"/>
+</field>
+<dataHolder inputId="in_stanjeKoriniska" name="#A7E690" type="dataModelerEntry" outId="out_stanjeKorisnika" value="streseeg.streseeg.StanjeKorisnika" id="stanjeKorisnika"/>
 </form>
