--- a/StresEEG/src/main/resources/streseeg/streseeg/POZIVKORISNIKUOD112CENTRA-taskform.form
+++ b/StresEEG/src/main/resources/streseeg/streseeg/POZIVKORISNIKUOD112CENTRA-taskform.form
@@ -5,13 +5,21 @@
 <property name="status" value="0"/>
 <field position="0" name="izvjestajId_izvjestajId" type="InputTextInteger" id="96249326">
 <property name="fieldRequired" value="false"/>
-<property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;Izvjestaj (izvjestajId)quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="label" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;Izvjestaj (izvjestajId)quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="readonly" value="false"/>
 <property name="inputBinding" value="in_izvjestaj/izvjestajId"/>
 <property name="outputBinding" value="out_izvjestaj/izvjestajId"/>
 <property name="fieldClass" value="java.lang.Integer"/>
+</field>
+<field position="1" name="izvjestajId_osjecamSeId" type="CheckBox" id="484019740">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;osjecamSeId (izvjestajId)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="in_izvjestaj/osjecamSeId"/>
+<property name="outputBinding" value="out_izvjestaj/osjecamSeId"/>
+<property name="fieldClass" value="java.lang.Boolean"/>
 </field>
 <dataHolder inputId="in_izvjestaj" name="#FF8881" type="dataModelerEntry" outId="out_izvjestaj" value="streseeg.streseeg.Izvjestaj" id="izvjestajId"/>
 </form>
