--- a/StresEEG/src/main/resources/streseeg/streseeg/POZIVKORISNIKUOD112CENTRA-taskform.form
+++ b/StresEEG/src/main/resources/streseeg/streseeg/POZIVKORISNIKUOD112CENTRA-taskform.form
@@ -13,5 +13,13 @@
 <property name="outputBinding" value="out_izvjestaj/izvjestajId"/>
 <property name="fieldClass" value="java.lang.Integer"/>
 </field>
-<dataHolder inputId="in_izvjestaj" name="#FF8881" type="dataModelerEntry" outId="out_izvjestaj" value="streseeg.streseeg.Izvjestaj" id="izvjestajId"/>
+<field position="1" name="izvjestajId_javljanje" type="CheckBox" id="593593573">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;javljanje (izvjestajId)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="in_izvjestaj/javljanje"/>
+<property name="outputBinding" value="out_izvjestaj/javljanje"/>
+<property name="fieldClass" value="java.lang.Boolean"/>
+</field>
+<dataHolder inputId="in_izvjestaj" name="#E9E371" type="dataModelerEntry" outId="out_izvjestaj" value="streseeg.streseeg.Izvjestaj" id="izvjestajId"/>
 </form>
